# bincue-studio

./: .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cdlabel/: CMakeLists.txt  README.md
cdlabel/src/: colorbutton.cpp  colorbutton.h  covers.cpp  covers.h  discspec.h  labelconfig.cpp  labelconfig.h  labeldialog.cpp  labeldialog.h  labeldialog_state.cpp  labelproject.cpp  labelproject.h  main.cpp  previewwidget.cpp  previewwidget.h  render.cpp  render.h  render_internal.h  rendertext.cpp
common/: platformstyle.h  taglibpath.h
docs/: remote-burning.md
installer/: README.md  bincue-studio.nsi  build_installer.cmake  ffmpeg-audio.cmake  windows.cmake
installer/config/: config.xml.in
packaging/: bincue-host-setup.ps1  bincue-studio.desktop  bincue-studio.rc  cdlabel.desktop  cdlabel.rc
packaging/aur/: PKGBUILD
src/: CMakeLists.txt  burncontroller.cpp  burncontroller.h  burndialog.cpp  burndialog.h  burnjob.cpp  burnjob.h  cdtextcompletion.cpp  cdtextcompletion.h  cdtextfields.cpp  cdtextfields.h  discdetailsdialog.cpp  discdetailsdialog.h  exportworker.cpp  exportworker.h  main.cpp  mainwindow.cpp  mainwindow.h  miniaudio.cpp  playbackengine.cpp  playbackengine.h  programaudio.cpp  programaudio.h  redbook.cpp  redbook.h  tagreader.cpp  tagreader.h  toolpaths.cpp  toolpaths.h  track.cpp  track.h  trackdetailsdialog.cpp  trackdetailsdialog.h
